--- a/chart/pyroscope/Chart.yaml
+++ b/chart/pyroscope/Chart.yaml
@@ -4,3 +4,9 @@ description: A Helm chart for Pyroscope
 type: application
 version: 0.2.0
 appVersion: "0.0.34"
+
+dependencies:
+- name: grafana
+  version: "6.13.*"
+  repository: https://grafana.github.io/helm-charts
+  condition: grafana.enabled
