--- a/chart/pyroscope/values.yaml
+++ b/chart/pyroscope/values.yaml
@@ -227,7 +227,7 @@ grafana:
     hosts: []
 
     ## Path for grafana ingress
-    path: /
+    path: /template/grafana
 
     ## TLS configuration for grafana Ingress
     ## Secret must be manually created in the namespace
