--- a/chart/pyroscope/values.yaml
+++ b/chart/pyroscope/values.yaml
@@ -184,39 +184,33 @@ livenessProbe:
   # -- Pyroscope server liveness check success threshold
   successThreshold: 1
 
-## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
-##
+# -- Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
 grafana:
-  enabled: true
+  enabled: false
   namespaceOverride: ""
 
-  ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
-  ##
+  plugins:
+    - pyroscope-datasource
+    - pyroscope-panel
+
+  # -- ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
   forceDeployDatasources: false
 
-  ## ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
-  ##
+  # -- ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
   forceDeployDashboards: false
-
-  ## Deploy default dashboards.
-  ##
-  defaultDashboardsEnabled: true
 
   adminPassword: pyroscope
 
   ingress:
-    ## If true, Grafana Ingress will be created
-    ##
+    # -- If true, Grafana Ingress will be created
     enabled: false
 
-    ## Annotations for Grafana Ingress
-    ##
+    # -- Annotations for Grafana Ingress
     annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
 
-    ## Labels to be added to the Ingress
-    ##
+    # -- Labels to be added to the Ingress
     labels: {}
 
     ## Hostnames.
@@ -224,14 +218,15 @@ grafana:
     ##
     # hosts:
     #   - grafana.domain.com
+
+    # -- Hostname for Grafana
     hosts: []
 
-    ## Path for grafana ingress
-    path: /template/grafana
+    # -- Path for grafana ingress
+    path: /
 
-    ## TLS configuration for grafana Ingress
+    # -- TLS configuration for grafana Ingress
     ## Secret must be manually created in the namespace
-    ##
     tls: []
     # - secretName: grafana-general-tls
     #   hosts:
@@ -242,98 +237,17 @@ grafana:
       enabled: true
       label: grafana_dashboard
 
-      ## Annotations for Grafana dashboard configmaps
-      ##
+      # -- Annotations for Grafana dashboard configmaps
       annotations: {}
-      multicluster: false
+
     datasources:
       enabled: true
       defaultDatasourceEnabled: true
 
-      ## URL of prometheus datasource
-      ##
-      # url: http://prometheus-stack-prometheus:9090/
-
-      # If not defined, will use prometheus.prometheusSpec.scrapeInterval or its default
-      # defaultDatasourceScrapeInterval: 15s
-
-      ## Annotations for Grafana datasource configmaps
-      ##
+      # -- Annotations for Grafana datasource configmaps
       annotations: {}
 
-      ## Create datasource for each Pod of Prometheus StatefulSet;
-      ## this uses headless service `prometheus-operated` which is
-      ## created by Prometheus Operator
-      ## ref: https://git.io/fjaBS
-      createPrometheusReplicasDatasources: false
       label: grafana_datasource
-  
-  
-      extraConfigmapMounts: []
-  # - name: certs-configmap
-  #   mountPath: /etc/grafana/ssl/
-  #   configMap: certs-configmap
-  #   readOnly: true
-
-  ## Configure additional grafana datasources (passed through tpl)
-  ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-  additionalDataSources: []
-  # - name: prometheus-sample
-  #   access: proxy
-  #   basicAuth: true
-  #   basicAuthPassword: pass
-  #   basicAuthUser: daco
-  #   editable: false
-  #   jsonData:
-  #       tlsSkipVerify: true
-  #   orgId: 1
-  #   type: prometheus
-  #   url: https://{{ printf "%s-prometheus.svc" .Release.Name }}:9090
-  #   version: 1
-
-  ## Passed to grafana subchart and used by servicemonitor below
-  ##
-  service:
-    portName: service
-
-  ## If true, create a serviceMonitor for grafana
-  ##
-  serviceMonitor:
-    ## Scrape interval. If not set, the Prometheus default scrape interval is used.
-    ##
-    interval: ""
-    selfMonitor: true
-
-    # Path to use for scraping metrics. Might be different if server.root_url is set
-    # in grafana.ini
-    path: "/metrics"
-
-    ## 	metric relabel configs to apply to samples before ingestion.
-    ##
-    metricRelabelings: []
-    # - action: keep
-    #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
-    #   sourceLabels: [__name__]
-
-    # 	relabel configs to apply to samples before ingestion.
-    ##
-    relabelings: []
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   separator: ;
-    #   regex: ^(.*)$
-    #   targetLabel: nodename
-    #   replacement: $1
-    #   action: replace
-
-  plugins: pyroscope-datasource 
-
-
-
-
-
-
-
-
 
 # -- CPU/Memory resource requests/limits
 resources: {}
